<resources>
    <string name="app_name">MelkovHw72</string>
    <string name="divide">&#247;</string>
    <string name="clear">C</string>
    <string name="plus_minus">&#177;</string>
    <string name="percent">%</string>
    <string name="multiplier">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="point">.</string>
    <string name="letter_m">M</string>
    <string name="letter_e">E</string>
    <string name="letter_l">L</string>
    <string name="letter_k">K</string>
    <string name="letter_o">O</string>
    <string name="letter_v">V</string>
    <string name="change_view">Изменить вид</string>
</resources>