<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="72sp"
        android:background="@color/result_background"
        android:textColor="@color/result_color"
        android:gravity="end"
        android:text="@string/zero"
        tools:text="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/number_background" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_clear"
                    android:text="@string/clear"
                    tools:ignore="NestedWeights"
                    style="@style/ButtonStyle" />

                <Button
                    android:id="@+id/button_plus_minus"
                    android:text="@string/plus_minus"
                    style="@style/ButtonStyle" />

                <Button
                    android:id="@+id/percent"
                    android:text="@string/percent"
                    style="@style/ButtonStyle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_nine"
                    android:text="@string/nine"
                    style="@style/ButtonStyle" />

                <Button
                    android:id="@+id/button_eight"
                    android:text="@string/eight"
                    style="@style/ButtonStyle"/>

                <Button
                    android:id="@+id/button_seven"
                    android:text="@string/seven"
                    style="@style/ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_six"
                    android:text="@string/six"
                    style="@style/ButtonStyle"/>

                <Button
                    android:id="@+id/button_five"
                    android:text="@string/five"
                    style="@style/ButtonStyle"/>

                <Button
                    android:id="@+id/button_four"
                    android:text="@string/four"
                    style="@style/ButtonStyle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_three"
                    android:text="@string/three"
                    style="@style/ButtonStyle"/>

                <Button
                    android:id="@+id/button_two"
                    android:text="@string/two"
                    style="@style/ButtonStyle"/>

                <Button
                    android:id="@+id/button_one"
                    android:text="@string/one"
                    style="@style/ButtonStyle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_zero"
                    android:text="@string/zero"
                    style="@style/ButtonStyle"/>

                <Button
                    android:id="@+id/button_point"
                    android:layout_weight="2"
                    android:text="@string/point"
                    style="@style/ButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:background="@color/action_background">

            <Button
                android:id="@+id/button_divide"
                android:text="@string/divide"
                style="@style/ActionButton"/>

            <Button
                android:id="@+id/button_multiplier"
                android:text="@string/multiplier"
                style="@style/ActionButton"/>

            <Button
                android:id="@+id/button_minus"
                android:text="@string/minus"
                style="@style/ActionButton"/>

            <Button
                android:id="@+id/button_plus"
                android:text="@string/plus"
                style="@style/ActionButton"/>

            <Button
                android:id="@+id/button_equals"
                android:text="@string/equals"
                style="@style/ActionButton"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>